--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     </nav>
     
     <div id="container"></div>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="script.js"></script>
+    <script src="dist/app.js"></script>
 </body>
 </html>
